[package]
name    = "crypro_shredding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka               = "0.28.0"
chacha20              = "0.9"
uuid                  = {version = "1.1.2", features = ["v4"]}
tokio                 = { version = "1", features = ["full"] }
futures               = "0.3"
tracing               = "0.1"
tracing-subscriber    = "0.3"
serde                 =  { version = "1.0", features = ["derive"] }
serde_json            = "1.0"
warp                  = "0.3"
rand                  = "0.8"
base64                = "0.13"